[package]
name = "subtitle"
description = "Find & download subtitles from the terminal."
version = "0.1.0"
authors = ["Aman <amanharwara@protonmail.com>"]
edition = "2018"
repository = "https://github.com/amanharwara/subtitle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "1.1"
md-5 = "0.9.1"
reqwest = {version="0.10.8",features=["blocking"]}
clap = "3.0.0-beta.2"