[package]
name = "subtitle"
description = "Find & download subtitles from the terminal."
version = "1.0.3"
authors = ["Aman Harwara <amanharwara@protonmail.com>"]
edition = "2018"
homepage = "https://github.com/amanharwara/subtitle"
repository = "https://github.com/amanharwara/subtitle"
license = "GPL-3.0-or-later"
keywords = ["subtitle", "subdb", "opensubtitles"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["test_videos/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.9.1"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
clap = "3.0.0-beta.2"
directories = "3.0.1"
thiserror = "1.0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.7.1"
colored = "2.0.0"
